Emergency model fix + car1

--- a/town Planner.html
+++ b/town Planner.html
@@ -29,7 +29,7 @@
 
     <div id="datetime_div">
         <p id="datetime_day_data">MON</p>
-        <!-- <p id="datetime_dash">-</p> -->
+        <p id="datetime_dash">-</p>
         <p id="datetime_time_data"></p>
         <p id="datetime_time_zeroes">:00</p>
     </div>
