Started the implementation of the road network

--- a/town Planner.html
+++ b/town Planner.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="../lib/dat.gui.min.js"></script>
     <script type="module" src="town_Planner.js"></script>
 
-    <script type="module" src="GUIController.js"></script>
+    <!-- <script type="module" src="GUIController.js"></script> -->
 </head>
 <body>
     <div class="fullscreen">
