--- a/town Planner.html
+++ b/town Planner.html
@@ -20,7 +20,7 @@
     
 
     <div id="score_div">
-        <p id="score_text">Score:</p>
+        <p id="score_text">Money:</p>
         <div id="score_data_div">
             <p id="score_data"></p>
         </div>
