--- a/town Planner.html
+++ b/town Planner.html
@@ -13,9 +13,19 @@
     <script type="module" src="GUIController.js"></script>
 </head>
 <body>
+
+    <div id="loading_screen">
+        <div id="loading_percentage">
+            <p id="loading_percentage_data"></p>
+            <p id="loading_percentage_data_percent_sign">%</p>
+        </div>
+        <div id="hint">
+            <p id="hint_data"></p>
+        </div>
+    </div>
+
     <div class="fullscreen">
         <canvas></canvas>
-
     </div>
 
 
