Gui reloaded + new shop, factory, and car AI, and people AI, and stuff

--- a/town Planner.html
+++ b/town Planner.html
@@ -32,29 +32,49 @@
     <div id="money_div">
         <p id="money_text">Money:</p>
         <div id="money_data_div">
-            <p id="money_data"></p>
+            <p id="money_data">2500</p>
+        </div>
+    </div>
+
+    <div id="income_div">
+        <p id="income_text">Income:</p>
+        <div id="income_data_div">
+            <p id="income_data">+130</p>
         </div>
     </div>
 
     <div id="population_div">
-        <p id="population_text">Population:</p>
+        <p id="population_text">People:</p>
         <div id="population_data_div">
-            <p id="population_data"></p>
+            <p id="population_working_data">5</p>
+            <p id="population_data_slash">/</p>
+            <p id="population_all_data">8</p>
         </div>
     </div>
 
     <div id="happiness_div">
         <p id="happiness_text">Happiness:</p>
         <div id="happiness_data_div">
-            <p id="happiness_data"></p>
+            <p id="happiness_data">100</p>
             <p id="happiness_percentage">%</p>
         </div>
     </div>
 
     <div id="production_div">
-        <p id="production_text">Production:</p>
+        <p id="production_text">Goods:</p>
         <div id="production_data_div">
-            <p id="production_data"></p>
+            <p id="production_used_data">500</p>
+            <p id="production_data_slash">/</p>
+            <p id="production_all_data">1500</p>
+        </div>
+    </div>
+
+    <div id="energy_div">
+        <p id="energy_text">Energy:</p>
+        <div id="energy_data_div">
+            <p id="energy_used_data">50</p>
+            <p id="energy_data_slash">/</p>
+            <p id="energy_all_data">100</p>
         </div>
     </div>
 
