Sound + camera boundary + day/night cycle + lights

--- a/town Planner.html
+++ b/town Planner.html
@@ -13,6 +13,18 @@
 </head>
 <body>
 
+
+    <!-- Music by Musicalmix2020 Music by Musicalmix2020 from Pixabay, royalty free -->
+    <!-- https://pixabay.com/music/search/genre/bossa%20nova/ -->
+    <audio loop id="background_audio" src="./assets/sounds/background.mp3"></audio>
+    <!-- <input type="range" id="volume" min="0" max="1" value="0.5" step="0.01">   probably useful   -->
+
+    <audio loop id="crowd_audio" src="assets/sounds/crowd.mp3"></audio>
+
+    <audio id="construct_fx" src="assets/sounds/construct.mp3"></audio>
+    <audio id="demolish_fx" src="assets/sounds/demolish.mp3"></audio>
+
+
     <div id="loading_screen">
         <p id="loading_loading">Loading...</p>
         <div id="loading_percentage">
