Final changes and some bug fixes

--- a/town Planner.html
+++ b/town Planner.html
@@ -65,7 +65,7 @@
         <div id="howto_back"><p id="howto_back_text">BACK TO MAIN MENU</p></div>
     </div>
 
-
+    <div id="loading_background"></div>
     <div id="loading_screen">
         <p id="loading_loading">Loading...</p>
         <div id="loading_percentage">
